--- a/templates/indexEn.html
+++ b/templates/indexEn.html
@@ -17,7 +17,7 @@
         <div class="language-menu" id="lang-menu">
             <!-- Botones para idioma -->
             <button onclick="window.location.href='/'">Spanish</button>
-            <button onclick="window.location.href='/en'">Inglish</button>
+            <button onclick="window.location.href='/en'">English</button>
         </div>
     </div>
     <div class="container">
