--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,7 +53,7 @@ h1 {
 
 .tabs-list {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   max-width: 28rem;
   margin: 0 auto 2rem;
   background: #e5e5e5;
