--- a/templates/index.html
+++ b/templates/index.html
@@ -52,11 +52,13 @@
                     <div class="form-grid">
                         <div class="form-group">
                             <label for="city">Ciudad</label>
-                            <input type="text" id="city" name="ciudad" placeholder="Ej: Nueva York" required value="Chiclayo">
+                            <input type="text" id="city" name="ciudad" placeholder="Ej: Nueva York" required
+                                value="Chiclayo">
                         </div>
                         <div class="form-group">
                             <label for="country">País</label>
-                            <input type="text" id="country" name="pais" placeholder="Ej: Estados Unidos" required value="Peru">
+                            <input type="text" id="country" name="pais" placeholder="Ej: Estados Unidos" required
+                                value="Peru">
                         </div>
                         <div class="form-group">
                             <label for="mapa-btn">Elegir en Mapa</label>
@@ -74,30 +76,33 @@
                         </div>
                         <div class="form-group">
                             <label for="latitude">Latitud</label>
-                            <input type="number" id="latitude" name="latitude" step="0.001" placeholder="Ej: 40.7128" value="-6.770154">
+                            <input type="number" id="latitude" name="latitude" step="0.001" placeholder="Ej: 40.7128"
+                                value="-6.770154">
                         </div>
                         <div class="form-group">
                             <label for="longitude">Longitud</label>
-                            <input type="number" id="longitude" name="longitude" step="0.001"
-                                placeholder="Ej: -74.0060" value="-79.855540">
+                            <input type="number" id="longitude" name="longitude" step="0.001" placeholder="Ej: -74.0060"
+                                value="-79.855540">
                         </div>
-                        <div class="form-grid date-time-grid">
-                            <div class="form-group">
-                                <label for="date">Fecha</label>
-                                <input type="date" id="date" name="date" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="time">Hora</label>
-                                <input type="time" id="time" name="time" required step="3600">
-                            </div>
-                             <button type="submit" class="btn-primary">Buscar Pronóstico</button>
-                        </div>
+
                     </div>
+                    <div class="form-grid date-time-grid">
+                        <div class="form-group">
+                            <label for="date">Fecha</label>
+                            <input type="date" id="date" name="date" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="time">Hora</label>
+                            <input type="time" id="time" name="time" required step="3600">
+                        </div>
+                        
+                    </div>
+                    <button type="submit" class="btn-primary">Buscar Pronóstico</button>
                 </div>
 
 
 
-               
+
             </form>
         </div>
 
