--- a/templates/indexEn.html
+++ b/templates/indexEn.html
@@ -41,13 +41,12 @@
 
         <div class="tabs">
             <div class="tabs-list">
-                <button class="tab-trigger active" data-tab="location">City / Country</button>
-                <button class="tab-trigger" data-tab="coordinates">Coordinates</button>
+                <button class="tab-trigger active" data-tab="coordinates">Coordinates</button>
             </div>
 
             <form class="search-form" action="/procesar" method="POST" id="weather-form">
 
-                <div class="tab-content active" id="location-tab">
+                <div class="tab-content active" id="coordinates-tab">
                     <div class="form-grid">
                         <div class="form-group">
                             <label for="city">City</label>
@@ -67,11 +66,6 @@
                                 </svg>
                             </button>
                         </div>
-                    </div>
-                </div>
-
-                <div class="tab-content" id="coordinates-tab">
-                    <div class="form-grid">
                         <div class="form-group">
                             <label for="latitude">Latitude</label>
                             <input type="number" id="latitude" name="latitude" step="0.001" placeholder="Ej: 40.7128"> 
@@ -81,9 +75,7 @@
                             <input type="number" id="longitude" name="longitude" step="0.001" placeholder="Ej: -74.0060">
                         </div>
                     </div>
-                </div>
-
-                <div class="form-grid date-time-grid"> 
+                    <div class="form-grid date-time-grid"> 
                     <div class="form-group">
                         <label for="date">Date</label>
                         <input type="date" id="date" name="date" required>
@@ -93,8 +85,12 @@
                         <input type="time" id="time" name="time" required step="3600">
                     </div>
                 </div>
+                 <button type="submit" class="btn-primary">Search Forecast</button>
+                </div>
 
-                <button type="submit" class="btn-primary">Search Forecast</button>
+                
+
+               
             </form>
         </div>
 
